Testing Using Google Test working

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,21 +1,52 @@
 include(FetchContent)
 
 FetchContent_Declare(
-  Catch2
-  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-  GIT_TAG v3.5.0
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
 )
-FetchContent_MakeAvailable(Catch2)
+
+FetchContent_MakeAvailable(googletest)
 
 add_executable(lighting_desk_tests
     universe_tests.cpp
-    light_engine_tests.cpp
+    # add other test files here
 )
 
 target_link_libraries(lighting_desk_tests
     PRIVATE
     light_engine_lib
-    Catch2::Catch2WithMain
+    GTest::gtest_main
 )
 
+include(GoogleTest)
+gtest_discover_tests(lighting_desk_tests)
+
+set_target_properties(lighting_desk_tests PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+)
+
+target_compile_options(lighting_desk_tests PRIVATE
+    $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -Wpedantic>
+    $<$<CXX_COMPILER_ID:Clang>:-Wall -Wextra -Wpedantic>
+    $<$<CXX_COMPILER_ID:MSVC>:/W4 /permissive->
+)
+target_include_directories(lighting_desk_tests PRIVATE
+    ${CMAKE_SOURCE_DIR}/src
+)
+
+add_custom_target(run_tests
+    COMMAND lighting_desk_tests
+    DEPENDS lighting_desk_tests
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
+
+enable_testing()
+
 add_test(NAME lighting_desk_tests COMMAND lighting_desk_tests)
+
+set_tests_properties(lighting_desk_tests PROPERTIES
+    TIMEOUT 30
+)
+
